--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,30 @@
+// CSS de Index
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body{
+    line-height: 1.3;
+    font-size: 1.3rem;
+}
+
+p{
+    margin-left: 0.5rem;
+}
+
+h1{
+    margin-left: 0.5rem;
+    font-size: 4.4rem;
+    font-style: italic;
+    margin: 0.5rem;
+}
+
+a{
+    text-decoration: none;
+    color:  black;
 }
 
 .icono{
@@ -10,9 +33,81 @@
     justify-content: center;
 }
 
+.cabecera{
+    position: sticky;
+}
+
 .navegacion{
     text-align: center;
-    border-style: groove;
-    border-radius: 5rem;
     margin: 0.40rem;
+}
+
+.fondo{
+    background-color: #ed8fb4;
+}
+
+.cards{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5rem;
+    margin-bottom: 0;
+}
+
+.cartas{
+    width: 20rem;
+    border: none;
+}
+
+.pieDePagina{
+    background-color: #d14485;
+    margin-top: 0.4rem;
+    border-style: groove;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    border-color: black;
+}
+
+i{
+    color: black;
+    font-size: 2rem;
+    justify-content: space-between;
+    margin-left: 4rem;
+    margin-right: 4rem;
+}
+
+// CSS de Sobre Nosotros
+
+.titulo_2{
+    text-align: center;
+    font-style: italic;
+    margin: 2rem;
+    margin-bottom: 0.8rem;
+}
+
+// CSS de Productos
+
+.titulo_3{
+    text-align: center;
+    position: absolute;
+    bottom: 18rem;
+    left: 38rem;
+}
+
+.textoProducto{
+    text-align: center;
+    position: absolute;
+    bottom: 14.5rem;
+    left: 25rem;
+    font-size: 2.5rem;
+    font-style: italic;
+    font-weight:500;
+}
+
+.subtitulo{
+    margin: 1rem;
+    text-align: center;
+    font-size: 3rem;
+    color: #7e066c;
+    font-style: italic;
 }
