--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,75 @@ i {
   font-size: 3rem;
   color: #7e066c;
   font-style: italic; }
+
+button {
+  font-size: 16px;
+  text-align: center;
+  border-radius: 8px;
+  padding: 10px 20px; }
+
+.button-checkout {
+  background-color: white;
+  color: black;
+  border: 2px solid white;
+  transition-duration: 0.4s;
+  position: absolute;
+  right: 15px;
+  bottom: 15px; }
+
+.button-checkout:hover {
+  background-color: #8EED94;
+  color: white; }
+
+.page-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly; }
+
+.product-container {
+  margin: 15px;
+  padding: 2px 16px;
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  background-color: #ed8fb4; }
+
+.product-container:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+
+.product-container img {
+  width: 300px; }
+
+.product-container h1 {
+  margin-bottom: 10px;
+  margin-left: 15px; }
+
+#button-add {
+  background-color: white;
+  color: black;
+  border: 2px solid #8EED94;
+  transition-duration: 0.4s;
+  position: absolute;
+  right: 15px;
+  bottom: 10px; }
+
+#button-add:hover {
+  background-color: #8EED94;
+  color: white; }
+
+.precio {
+  font-size: 3rem; }
+
+.contenedorProductos {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  justify-content: center; }
+
+.tarjetas {
+  background-color: #ed8fb4; }
+
+.espaciado {
+  margin-left: 10rem; }
