--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -188,12 +188,9 @@ button {
     margin-left: 1rem;
     margin-right: 1rem;
     justify-content: center;
+    padding-left: 5rem;
 }
 
 .tarjetas{
     background-color: #ed8fb4;
-}
-
-.espaciado{
-    margin-left:10rem;
 }
